--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "ensy": "~1.0.0",
-    "pixi.js": "~3.0.8"
+    "pixi.js": "~3.0.8",
+    "underscore": "~1.8.3",
+    "easystarjs": "~0.2.3"
   }
 }
